# verismith

./: .dir-locals.el  .envrc  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  Setup.hs  Vagrantfile  default.nix  flake.nix  release.nix  run_sim.sh  shell.nix  stack-8.4.2.yaml  stack.yaml  verifuzz.cabal  verismith.cabal
.github/workflows/: main.yml
app/: Main.hs  Simulation.hs  Test.hs  Yosys.hs
bugs/: icarus_10.md  minimal_1.v  minimal_2.v  minimal_3.v  minimal_4.v  minimal_5.v  minimal_6.v  minimal_7.v  minimal_8.v  original_2.v  original_3.v  original_4.v  original_5.v  original_6.v  original_7.v  quartus_12.md  vivado_1.md  vivado_2.md  vivado_3.md  vivado_4.md  vivado_5.md  xst_1_comment.md  xst_1_original.v  yosys_11.md  yosys_13.md  yosys_6.md  yosys_7.md  yosys_8.md  yosys_9.md
bugs/vivado/: 1_generated.v  1_minimal.v  1_original.v  2_minimal.v  2_original.v
data/: README.md  cells_cmos.v  cells_cyclone_v.v  cells_verific.v  cells_xilinx_7.v  cells_yosys.v
examples/: config.toml  decl.v  shift.v  simple.v
experiments/: .gitignore  config_extra_large.toml  config_large.toml  config_large_yosys.toml  config_medium.toml  config_medium_rand.toml  config_size_l.toml  config_size_m.toml  config_size_s.toml  config_size_xl.toml  config_small.toml  config_tiny.toml  config_yosys.toml  instructions.md  instructions.org  quartus_all.toml  reduction.org  verismith_creduce.csv  vivado_all.toml  yosys_all.toml
nix/: hedgehog-fn.nix  parser-combinators.nix  tomland.nix
report/: references.bib
report/auto/: references.el
scripts/: Dockerfile  build.sh  config.toml  convert.py  exclude.sh  filter_icarus.sh  main.v  parallelsets.py  reducer.sh  run  run.py  scale.py  setup.sh  size.py  swarm  swarm.py
src/: Main.hs  VeriFuzz.hs  VeriSmith.hs  Verismith.hs
src/Test/: VeriFuzz.hs
src/Test/VeriFuzz/: Circuit.hs  CodeGen.hs  Helpers.hs  Mutate.hs  Simulator.hs  Types.hs  Verilog.hs  VerilogAST.hs
src/Test/VeriFuzz/Graph/: ASTGen.hs  CodeGen.hs  Random.hs  RandomAlt.hs
src/Test/VeriFuzz/Internal/: Gen.hs  Shared.hs
src/Test/VeriFuzz/Simulator/: General.hs  Icarus.hs  Xst.hs  Yosys.hs
src/Test/VeriFuzz/Verilog/: AST.hs  Arbitrary.hs  CodeGen.hs  Helpers.hs  Mutate.hs
src/VeriFuzz/: AST.hs  ASTGen.hs  Circuit.hs  CodeGen.hs  Config.hs  Context.hs  Env.hs  Eval.hs  Fuzz.hs  Gen.hs  General.hs  Generate.hs  Helpers.hs  Icarus.hs  Internal.hs  Lexer.hs  Mutate.hs  Parser.hs  Random.hs  RandomAlt.hs  RecursionScheme.hs  Reduce.hs  Report.hs  Result.hs  Sim.hs  Simulator.hs  Verilog.hs  XST.hs  Yosys.hs
src/VeriFuzz/Circuit/: Base.hs  CodeGen.hs  Gen.hs  Internal.hs  Random.hs  RandomAlt.hs
src/VeriFuzz/Graph/: ASTGen.hs  CodeGen.hs  Random.hs  RandomAlt.hs
src/VeriFuzz/Internal/: AST.hs  Circuit.hs  Gen.hs  Simulator.hs  Template.hs
src/VeriFuzz/Parser/: Lex.x  Parser.hs  Preprocess.hs  Token.hs
src/VeriFuzz/Sim/: Env.hs  Icarus.hs  Identity.hs  Internal.hs  Quartus.hs  Reduce.hs  Template.hs  Vivado.hs  XST.hs  Yosys.hs
src/VeriFuzz/Simulator/: General.hs  Icarus.hs  Xst.hs  Yosys.hs
src/VeriFuzz/Simulator/Internal/: Template.hs
src/VeriFuzz/Verilog/: AST.hs  Arbitrary.hs  BitVec.hs  CodeGen.hs  Eval.hs  Gen.hs  Helpers.hs  Internal.hs  Lex.x  Mutate.hs  Parser.hs  Preprocess.hs  Quote.hs  Token.hs
src/VeriSmith/: Config.hs  Generate.hs  Reduce.hs  Result.hs  Sim.hs
src/VeriSmith/Circuit/: Gen.hs  Internal.hs
src/VeriSmith/Sim/: Icarus.hs  Identity.hs  Template.hs  Vivado.hs
src/VeriSmith/Verilog/: AST.hs  CodeGen.hs  Parser.hs  Quote.hs  Token.hs
src/Verismith/: Circuit.hs  Config.hs  CounterEg.hs  EMI.hs  Fuzz.hs  Generate.hs  Internal.hs  OptParser.hs  Reduce.hs  Report.hs  Result.hs  Shuffle.hs  Sim.hs  Tool.hs  Utils.hs  Verilog.hs  Verilog2005.hs
src/Verismith/Circuit/: Base.hs  Gen.hs  Internal.hs  Random.hs
src/Verismith/Sim/: Icarus.hs  Identity.hs  Internal.hs  Quartus.hs  Template.hs  Vivado.hs  XST.hs  Yosys.hs
src/Verismith/Tool/: Icarus.hs  Identity.hs  Internal.hs  Quartus.hs  QuartusLight.hs  Template.hs  Vivado.hs  XST.hs  Yosys.hs
src/Verismith/Verilog/: AST.hs  BitVec.hs  CodeGen.hs  Distance.hs  Eval.hs  Internal.hs  Lex.x  Mutate.hs  Parser.hs  Preprocess.hs  Quote.hs  Token.hs
src/Verismith/Verilog2005/: AST.hs  Generator.hs  Lexer.x  LibPretty.hs  Mutation.hs  Parser.hs  PrettyPrinter.hs  Randomness.hs  Token.hs  Utils.hs
test/: Benchmark.hs  Config.hs  Distance.hs  Doctest.hs  Parser.hs  Property.hs  Reduce.hs  Test.hs  Unit.hs  simple.v
test/data/: additional.toml  default_config.toml
tests/: Doctest.hs  Property.hs  Test.hs  Unit.hs  doctest.json  test.hs
