name: verifuzz
version: 0.1.1.0
synopsis: Random verilog generation and simulator testing.
description:
  VeriFuzz provides random verilog generation modules
  implementing functions to test supported simulators.
homepage: https://github.com/ymherklotz/VeriFuzz#readme
license: BSD3
license-file: LICENSE
author: Yann Herklotz Grave
maintainer: yann [at] yannherklotzgrave [dot] com
copyright: 2018 Yann Herklotz Grave
category: Web
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md
                  , data/*.v
                  , examples/*.v

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  other-modules: VeriFuzz.Internal
               , VeriFuzz.Internal.Circuit
               , VeriFuzz.Internal.Simulator
               , VeriFuzz.Internal.AST
  exposed-modules: VeriFuzz
                 , VeriFuzz.ASTGen
                 , VeriFuzz.AST
                 , VeriFuzz.Circuit
                 , VeriFuzz.CodeGen
                 , VeriFuzz.Env
                 , VeriFuzz.General
                 , VeriFuzz.Gen
                 , VeriFuzz.Icarus
                 , VeriFuzz.Lexer
                 , VeriFuzz.Mutate
                 , VeriFuzz.Parser
                 , VeriFuzz.RandomAlt
                 , VeriFuzz.Random
                 , VeriFuzz.XST
                 , VeriFuzz.Yosys
  build-depends: base >=4.7 && <5
               , QuickCheck >=2.3 && <2.10
               , fgl >=5.7 && <5.8
               , fgl-arbitrary >=0.2 && <0.3
               , fgl-visualize >=0.1 && <0.2
               , lens >=4.17 && <4.18
               , random >=1.1 && <1.2
               , shakespeare >=2 && <2.1
               , shelly >=1.8.0 && <1.9
               , text >=1.2 && <1.3
               , bytestring >=0.10 && <0.11
               , hashable >=1.2 && <1.3
               , transformers >=0.5 && <0.6
               , filepath >=1.4.2 && <1.5
               , binary >= 0.8.6 && <0.9
               , cryptonite >=0.25 && <0.26
               , memory >=0.14 && <0.15
               , DRBG >=0.5 && <0.6
               , parsec >= 3.1 && < 3.2
  default-extensions: OverloadedStrings

executable verifuzz
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -Wall -Werror
  build-depends: base >= 4.7 && < 5
               , verifuzz >= 0.1 && <0.2
               , fgl >=5.7 && <5.8
               , fgl-arbitrary >=0.2 && <0.3
               , fgl-visualize >=0.1 && <0.2
               , QuickCheck >=2.3 && <2.10
               , text >=1.2 && <1.3
               , bytestring >=0.10 && <0.11
               , shelly >=1.8.0 && <1.9
               , DRBG >=0.5 && <0.6
               , lens >=4.17 && <4.18
               , binary >= 0.8.6 && <0.9
               , optparse-applicative >=0.14 && <0.15
  default-extensions: OverloadedStrings

test-suite verifuzz-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  ghc-options: -Wall -Werror
  other-modules: Unit
               , Property
  build-depends: base >= 4 && < 5
               , verifuzz >=0.1 && <0.2
               , fgl >=5.7 && <5.8
               , tasty >= 1.2 && <1.3
               , tasty-hunit >= 0.10 && <0.11
               , tasty-quickcheck >= 0.10 && <0.11
               , lens >=4.17 && <4.18
               , text >=1.2 && <1.3
  default-extensions: OverloadedStrings

test-suite verifuzz-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  ghc-options: -Wall -Werror
  build-depends: base >=4.7 && <5
               , verifuzz >=0.1 && <0.2
               , doctest >=0.16 && <0.17
               , doctest-discover >=0.2 && <0.3
  default-extensions: OverloadedStrings