name: verifuzz
version: 0.1.1.0
synopsis: Random verilog generation and simulator testing.
description:
  VeriFuzz provides random verilog generation modules
  implementing functions to test supported simulators.
homepage: https://github.com/ymherklotz/VeriFuzz#readme
license: BSD3
license-file: LICENSE
author: Yann Herklotz
maintainer: yann [at] ymhg [dot] org
copyright: 2018 Yann Herklotz
category: Web
build-type: Custom
cabal-version: >=1.10
extra-source-files: README.md
                  , data/*.v

custom-setup
  setup-depends:
    base >= 4 && <5,
    cabal-doctest >= 1 && <1.1,
    Cabal >= 1.10 && <2.5

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-tools: alex >=3 && <4
  exposed-modules: VeriFuzz
                 , VeriFuzz.Circuit
                 , VeriFuzz.Circuit.Base
                 , VeriFuzz.Circuit.Gen
                 , VeriFuzz.Circuit.Internal
                 , VeriFuzz.Circuit.Random
                 , VeriFuzz.Config
                 , VeriFuzz.Internal
                 , VeriFuzz.Sim
                 , VeriFuzz.Sim.Env
                 , VeriFuzz.Sim.Icarus
                 , VeriFuzz.Sim.Internal
                 , VeriFuzz.Sim.Reduce
                 , VeriFuzz.Sim.Template
                 , VeriFuzz.Sim.XST
                 , VeriFuzz.Sim.Yosys
                 , VeriFuzz.Verilog
                 , VeriFuzz.Verilog.AST
                 , VeriFuzz.Verilog.CodeGen
                 , VeriFuzz.Verilog.Gen
                 , VeriFuzz.Verilog.Internal
                 , VeriFuzz.Verilog.Lex
                 , VeriFuzz.Verilog.Mutate
                 , VeriFuzz.Verilog.Parser
                 , VeriFuzz.Verilog.Preprocess
                 , VeriFuzz.Verilog.Token
  build-depends: base >=4.7 && <5
               , hedgehog >= 0.6 && <0.7
               , fgl >=5.7 && <5.8
               , fgl-visualize >=0.1 && <0.2
               , lens >=4.17 && <4.18
               , random >=1.1 && <1.2
               , shakespeare >=2 && <2.1
               , shelly >=1.8.0 && <1.9
               , text >=1.2 && <1.3
               , bytestring >=0.10 && <0.11
               , filepath >=1.4.2 && <1.5
               , binary >= 0.8.6 && <0.9
               , cryptonite >=0.25 && <0.26
               , memory >=0.14 && <0.15
               , DRBG >=0.5 && <0.6
               , parsec >=3.1 && <3.2
               , transformers >=0.5 && <0.6
               , tomland >=0.5 && <0.6
               , array >=0.5 && <0.6
  default-extensions: OverloadedStrings

executable verifuzz
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -Wall -Werror
  build-depends: base >= 4.7 && < 5
               , shelly >=1.8.0 && <1.9
               , verifuzz >= 0.1 && <0.2
               , text >=1.2 && <1.3
               , bytestring >=0.10 && <0.11
               , optparse-applicative >=0.14 && <0.15
  default-extensions: OverloadedStrings

test-suite verifuzz-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  ghc-options: -Wall -Werror
  other-modules: Unit
               , Property
  build-depends: base >=4 && <5
               , verifuzz >=0.1 && <0.2
               , fgl >=5.7 && <5.8
               , tasty >=1.2 && <1.3
               , tasty-hunit >=0.10 && <0.11
               , tasty-hedgehog >=0.2 && <0.3
               , hedgehog >=0.6 && <0.7
               , lens >=4.17 && <4.18
               , text >=1.2 && <1.3
               , parsec >= 3.1 && < 3.2
  default-extensions: OverloadedStrings

test-suite verifuzz-doctest
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Doctest.hs
  ghc-options: -Wall -Werror
  build-depends: base >=4.7 && <5
               , doctest >=0.16 && <0.17
               , verifuzz
  default-extensions: OverloadedStrings
