name: verifuzz
version: 0.3.1.0
synopsis: Random verilog generation and simulator testing.
description:
  VeriFuzz provides random verilog generation modules
  implementing functions to test supported simulators.
homepage: https://github.com/ymherklotz/VeriFuzz#readme
license: BSD3
license-file: LICENSE
author: Yann Herklotz
maintainer: yann [at] yannherklotz [dot] com
copyright: 2018-2019 Yann Herklotz
category: Web
build-type: Custom
cabal-version: >=1.10
extra-source-files: README.md
                  , data/*.v

custom-setup
  setup-depends:
    base >= 4 && <5,
    cabal-doctest >= 1 && <1.1,
    Cabal >= 1.10 && <2.5

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-tools: alex >=3 && <4
  other-modules: Paths_verifuzz
  exposed-modules: VeriFuzz
                 , VeriFuzz.Circuit
                 , VeriFuzz.Circuit.Base
                 , VeriFuzz.Circuit.Gen
                 , VeriFuzz.Circuit.Internal
                 , VeriFuzz.Circuit.Random
                 , VeriFuzz.Config
                 , VeriFuzz.Fuzz
                 , VeriFuzz.Internal
                 , VeriFuzz.Reduce
                 , VeriFuzz.Report
                 , VeriFuzz.Result
                 , VeriFuzz.Sim
                 , VeriFuzz.Sim.Icarus
                 , VeriFuzz.Sim.Identity
                 , VeriFuzz.Sim.Internal
                 , VeriFuzz.Sim.Quartus
                 , VeriFuzz.Sim.Template
                 , VeriFuzz.Sim.Vivado
                 , VeriFuzz.Sim.XST
                 , VeriFuzz.Sim.Yosys
                 , VeriFuzz.Verilog
                 , VeriFuzz.Verilog.AST
                 , VeriFuzz.Verilog.BitVec
                 , VeriFuzz.Verilog.CodeGen
                 , VeriFuzz.Verilog.Eval
                 , VeriFuzz.Verilog.Gen
                 , VeriFuzz.Verilog.Internal
                 , VeriFuzz.Verilog.Lex
                 , VeriFuzz.Verilog.Mutate
                 , VeriFuzz.Verilog.Parser
                 , VeriFuzz.Verilog.Preprocess
                 , VeriFuzz.Verilog.Quote
                 , VeriFuzz.Verilog.Token
  build-depends: base >=4.7 && <5
               -- Cannot upgrade to 1.0 because of missing MonadGen instance for
               -- StateT.
               , hedgehog >= 0.5.3 && <0.7
               , fgl >=5.6 && <5.8
               , fgl-visualize >=0.1 && <0.2
               , lens >=4.16.1 && <4.18
               , random >=1.1 && <1.2
               , shakespeare >=2 && <2.1
               , shelly >=1.8.0 && <1.9
               , text >=1.2 && <1.3
               , bytestring >=0.10 && <0.11
               , filepath >=1.4.2 && <1.5
               , binary >= 0.8.5.1 && <0.9
               , cryptonite >=0.25 && <0.26
               , memory >=0.14 && <0.15
               , DRBG >=0.5 && <0.6
               , parsec >=3.1 && <3.2
               , transformers >=0.5 && <0.6
               , transformers-base >=0.4.5 && <0.5
               , tomland >=1.0 && <1.2
               , prettyprinter >=1.2.0.1 && <1.3
               , array >=0.5 && <0.6
               , recursion-schemes >=5.0.2 && <5.2
               , time >= 1.8.0.2 && <1.9
               , lifted-base >=0.2.3 && <0.3
               , monad-control >=1.0.2 && <1.1
               , gitrev >= 1.3.1 && <1.4
               , deepseq >= 1.4.3.0 && <1.5
               , template-haskell >=2.13.0 && <2.15
               , optparse-applicative >=0.14 && <0.15
               , exceptions >=0.10.0 && <0.11
               , blaze-html >=0.9.0.1 && <0.10
               , statistics >=0.14.0.2 && <0.16
               , vector >=0.12.0.1 && <0.13
  default-extensions: OverloadedStrings

executable verifuzz
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded
  build-depends: base >= 4.7 && < 5
               , verifuzz
  default-extensions: OverloadedStrings

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules: Unit
               , Property
               , Reduce
               , Parser
  build-depends: base >=4 && <5
               , verifuzz
               , fgl >=5.6 && <5.8
               , tasty >=1.0.1.1 && <1.3
               , tasty-hunit >=0.10 && <0.11
               , tasty-hedgehog >=0.2 && <0.3
               , hedgehog >=0.5.3 && <0.7
               , hedgehog-fn >=0.5 && <0.7
               , lens >=4.16.1 && <4.18
               , shakespeare >=2 && <2.1
               , text >=1.2 && <1.3
               , parsec >= 3.1 && < 3.2
  default-extensions: OverloadedStrings

--test-suite doctest
--  default-language: Haskell2010
--  type: exitcode-stdio-1.0
--  hs-source-dirs: test
--  main-is: Doctest.hs
--  other-modules: Build_doctests
--  build-depends: base >=4.7 && <5
--               , doctest >=0.16 && <0.17
--               , Glob >=0.9.3 && <0.11
--               , verifuzz
--  default-extensions: OverloadedStrings
