name: verismith
version: 1.0.0.2
synopsis: Random verilog generation and simulator testing.
description:
  Verismith provides random verilog generation modules
  implementing functions to test supported simulators.
homepage: https://github.com/ymherklotz/verismith#readme
license: GPL-3
license-file: LICENSE
author: Yann Herklotz
maintainer: yann [at] yannherklotz [dot] com
copyright: 2018-2020, 2024 Yann Herklotz
category: Hardware
build-type: Simple
cabal-version: >=1.10
extra-source-files: README.md
                  , examples/*.v
                  , examples/config.toml
                  , scripts/*.py
                  , scripts/*.sh
data-files: data/*.v

source-repository head
  type:     git
  location: https://github.com/ymherklotz/verismith

source-repository this
  type:     git
  location: https://github.com/ymherklotz/verismith
  tag:      v1.0.0.0

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-tools: alex >=3 && <4
  other-modules: Paths_verismith
--  ghc-options: -ddump-simpl -ddump-to-file
  exposed-modules: Verismith
                 , Verismith.Circuit
                 , Verismith.Circuit.Base
                 , Verismith.Circuit.Gen
                 , Verismith.Circuit.Internal
                 , Verismith.Circuit.Random
                 , Verismith.Config
                 , Verismith.CounterEg
                 , Verismith.EMI
                 , Verismith.Fuzz
                 , Verismith.Generate
                 , Verismith.OptParser
                 , Verismith.Reduce
                 , Verismith.Report
                 , Verismith.Result
                 , Verismith.Shuffle
                 , Verismith.Tool
                 , Verismith.Tool.Icarus
                 , Verismith.Tool.Identity
                 , Verismith.Tool.Internal
                 , Verismith.Tool.Quartus
                 , Verismith.Tool.QuartusLight
                 , Verismith.Tool.Template
                 , Verismith.Tool.Vivado
                 , Verismith.Tool.XST
                 , Verismith.Tool.Yosys
                 , Verismith.Utils
                 , Verismith.Verilog
                 , Verismith.Verilog.AST
                 , Verismith.Verilog.BitVec
                 , Verismith.Verilog.CodeGen
                 , Verismith.Verilog.Distance
                 , Verismith.Verilog.Eval
                 , Verismith.Verilog.Internal
                 , Verismith.Verilog.Lex
                 , Verismith.Verilog.Mutate
                 , Verismith.Verilog.Parser
                 , Verismith.Verilog.Preprocess
                 , Verismith.Verilog.Quote
                 , Verismith.Verilog.Token
                 , Verismith.Verilog2005
                 , Verismith.Verilog2005.Token
                 , Verismith.Verilog2005.Lexer
                 , Verismith.Verilog2005.AST
                 , Verismith.Verilog2005.Utils
                 , Verismith.Verilog2005.LibPretty
                 , Verismith.Verilog2005.PrettyPrinter
                 , Verismith.Verilog2005.Parser
                 , Verismith.Verilog2005.Randomness
                 , Verismith.Verilog2005.Generator
                 , Verismith.Verilog2005.Mutation
  build-depends: array >=0.5 && <0.6
               , base >=4.7 && <5
               , binary >= 0.8.5.1 && <0.9
               , blaze-html >=0.9.0.1 && <0.10
               , bytestring >=0.10 && <0.12
               , cryptonite >=0.25 && <0.31
               , deepseq >= 1.4.3.0 && <1.5
               , exceptions >=0.10.0 && <0.11
               , fgl >=5.6 && <5.9
               , fgl-visualize >=0.1 && <0.2
               , filepath >=1.4.2 && <1.5
               , gitrev >= 1.3.1 && <1.4
               , hedgehog >=1.0 && <1.5
               , lens >=4.16.1 && <5.3
               , lifted-base >=0.2.3 && <0.3
               , memory >=0.14 && <0.20
               , monad-control >=1.0.2 && <1.1
               , mtl >=2.2.2 && <2.4
               , optparse-applicative >=0.14 && <0.19
               , parsec >=3.1 && <3.2
               , prettyprinter >=1.2.0.1 && <1.8
               , random >=1.1 && <1.3
               , recursion-schemes >=5.0.2 && <5.3
               , shelly >=1.8.0 && <1.13
               , template-haskell >=2.13.0 && <2.21
               , text >=1.2 && <2.1
               , time >= 1.8.0.2 && <1.13
               , tomland >=1.3.2 && <1.4
               , transformers >=0.5 && <0.7
               , transformers-base >=0.4.5 && <0.5
               , containers
               , unordered-containers
               , mwc-probability
               , primitive
               , vector
  default-extensions: OverloadedStrings

executable verismith
  hs-source-dirs: app
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded
  build-depends: base >= 4.7 && < 5
               , verismith
  default-extensions: OverloadedStrings

benchmark benchmark
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Benchmark.hs
  build-depends: base >=4 && <5
               , verismith
               , criterion >=1.5.5 && <1.6
               , lens >=4.16.1 && <5.2
  default-extensions: OverloadedStrings

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules: Unit
               , Config
               , Property
               , Reduce
               , Parser
               , Distance
  build-depends: base >=4 && <5
               , verismith
               , fgl >=5.6 && <5.9
               , hedgehog >=1.0 && <1.5
               , lens >=4.16.1 && <5.3
               , parsec >= 3.1 && < 3.2
               , tasty >=1.0.1.1 && <1.5
               , tasty-hedgehog >=1.0 && <1.5
               , tasty-hunit >=0.10 && <0.11
               , text >=1.2 && <2.1
  default-extensions: OverloadedStrings

--test-suite doctest
--  default-language: Haskell2010
--  type: exitcode-stdio-1.0
--  hs-source-dirs: test
--  main-is: Doctest.hs
--  other-modules: Build_doctests
--  build-depends: base >=4.7 && <5
--               , doctest >=0.16 && <0.17
--               , Glob >=0.9.3 && <0.11
--               , verismith
--  default-extensions: OverloadedStrings
